<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.taisau.substation.ui.personlist.PersonListActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:background="@drawable/title_background_blue"
        android:gravity="center_vertical">

        <RelativeLayout
            android:id="@+id/rl_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:src="@mipmap/ic_back" />
            <!--    android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"-->
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_setting_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/rl_back"
            android:text="@string/person_list"
            android:textColor="@color/color_white_default"
            android:textSize="32sp" />


        <ImageView
            android:id="@+id/personList_search_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@mipmap/search_icon" />

        <EditText
            android:id="@+id/personList_search_edit"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/personList_search_img"
            android:hint="@string/search_hint"
            android:singleLine="true"
            android:textColor="@color/white_fff"
            android:textColorHighlight="@color/white_fff"
            android:textColorHint="@color/white_fff"
            android:textColorLink="@color/white_fff"
            android:theme="@style/EditTextWhite" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/data_checking"
        android:textSize="32sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/personList_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>
