<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_000"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <FrameLayout
            android:id="@+id/main_preview_back_frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <SurfaceView
                android:id="@+id/main_camera_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" />

            <include layout="@layout/content_button" />

        </FrameLayout>

        <ImageView
            android:id="@+id/iv_server_connect"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginTop="@dimen/dp10"
            android:padding="@dimen/dp10"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_server_connect"
            android:visibility="gone"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/iv_usb_connect"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/dp80"
            android:layout_marginTop="@dimen/dp10"
            android:padding="@dimen/dp10"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_usb_connect"
            android:visibility="gone"
            tools:visibility="visible" />

        <include
            layout="@layout/content_main_right_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:visibility="gone" />

        <include
            android:id="@+id/main_compare_info"
            layout="@layout/content_main_bottom_compare_info"
            android:visibility="gone"
            tools:visibility="gone" />

    </FrameLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/color_44">

        <TextView
            android:id="@+id/tv_input_id"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp30"
            android:background="@color/color_white_default"
            android:gravity="center"
            android:hint=""
            android:maxLength="3"
            android:textColor="@color/black_000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_input_id"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp15"
            android:text="@string/number_plus_open"
            android:textColor="@color/color_f4c922"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/number_plus_close"
            android:textColor="@color/color_ab3232"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_2"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="@dimen/dp15"
            android:text="@string/handler_string"
            android:textColor="@color/color_white_default"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/tv_note_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dp40"
            android:text="@string/string_note_info"
            android:textSize="20sp"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>